fixed some styling on minesweeper. Still need to solve the scrollbar appearing when you flag the right or bottom side

--- a/src/app/games/minesweeper/minesweeper.component.css
+++ b/src/app/games/minesweeper/minesweeper.component.css
@@ -11,8 +11,11 @@
   background-size: contain;
 }
 
+code {
+  font-size: 1rem;
+}
+
 .drop-in {
-  width: 200%;
   opacity: 0.5;
   animation: dropInAnimation 0.15s linear forwards;
 }
@@ -21,11 +24,11 @@
   0% {
     width: 200%;
     opacity: 0.5;
+    position: absolute !important;
   }
   100% {
     width: 55%;
     opacity: 1;
-    color: a;
   }
 }
 
@@ -34,6 +37,8 @@ img {
 }
 
 .minesweeper-cell {
+  max-width: 31px;
+  max-height: 31px;
   width: 31px;
   height: 31px;
   border-right: 1.8px solid grey;
@@ -52,8 +57,8 @@ img {
 
 @media (max-width: 1024px) {
   .minesweeper-cell {
-    width: 25px;
-    height: 25px;
+    width: 26px;
+    height: 26px;
   }
 }
 
